# meson-python-pybind11-example

./: .gitignore  README.md  meson.build  pyproject.toml
include/mesonPythonPybind11Example/: myLib.h
mesonPythonPybind11Example/: meson.build  module.cpp  myLib2.py
src/: meson.build  myLib.cpp
tests/: test.py
